# blendxpz

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
blendxpz/: __init__.py  blendxpz_config.yaml  dataset_generator.py  losses.py  madness_config.yaml  metrics.py  model.py  pz_estimator.py  utils.py
blendxpz/configs/: madness_config.yaml
blendxpz/data/: HSC.yaml
blendxpz/data/hsc_real_data/9813_4,4/images/: 9813_4,4_43158597349147528.fits
blendxpz/data/simulated_blends/: readme.md
blendxpz/pz_estimators/: CNN_pz_estimator.py  cnn.py  mlp.py  vae_pz_estimator.py
blendxpz/simulations/: btk_setup.py  sampling.py  ssi.py
blendxpz/training/: dataset_generator.py
bpz/: __init__.py  latent_pz_estimator.py  losses.py  model.py  pz_estimator.py
data/hsc_psfs/z/: psf-calexp-pdr2_wide-HSC-Z-9813-4,4-150.17045-2.14794.fits
data/hsc_real_data/9813_4,3/images/: 9813_4,3_43158593054186455.fits  9813_4,3_43158593054201992.fits
data/hsc_real_data/9813_4,4/images/: 9813_4,4_43158597349147533.fits
data/hsc_real_data/9814_4,3/psfs/g/: psf-calexp-pdr2_wide-HSC-G-9813-4,3-150.33517-1.95783.fits
examples/: train_pz_estimator.py
notebooks/: test_mlp_pz.ipynb  test_real_ssi.ipynb  test_ssi.ipynb
scripts/: simulate_blends.py
scripts/inference/: extract_isolated_photometry.py  run_madness.py
scripts/simulations/: create_tf_dataset.py  madness_testdata.py  simulate_blends.py  train_val_sims.py
scripts/training/: train_CNN_pz.py  train_cnn_pz_estimator.py  train_madness.py  train_mlp_pz_estimator.py
(+8 files in other folders)
