[tool.poetry]
name = "blendxpz"
version = "0.0.1"
description = "Evaluate pz effects due to blending"
authors = ["Biswajit Biswas <biswas@apc.in2p3.fr>"]
readme = "README.md"
keywords = ["galaxies", "deblending", "cosmology", "photo-z"]
license = "MIT"
include = ["blendxpz/data/*"]
repository = "https://github.com/b-biswas/blendxpz"

[tool.poetry.dependencies]
numpy = "*"
astropy = "*"
blending_toolkit = "1.0.0b2"
galsim = "*"
matplotlib = "*"
pyyaml = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
